--- a/package.json
+++ b/package.json
@@ -3,19 +3,21 @@
   "version": "1.0.0",
   "scripts": {
     "start": "ts-node src/index.ts",
-    "dev": "nodemon --exec ts-node src/index.ts"
+    "dev": "nodemon --exec ts-node src/index.ts",
+    "build": "tsc"
   },
   "dependencies": {
-    "@solana/web3.js": "^1.95.8",
+    "@jup-ag/api": "^6.0.48",
     "@solana/spl-token": "^0.4.9",
-    "telegram": "^2.25.14",
+    "@solana/web3.js": "^1.95.8",
+    "bs58": "^5.0.0",
     "cross-fetch": "^4.0.0",
     "dotenv": "^16.4.7"
   },
   "devDependencies": {
     "@types/node": "^22.10.5",
-    "typescript": "^5.7.3",
+    "nodemon": "^3.1.9",
     "ts-node": "^10.9.2",
-    "nodemon": "^3.1.9"
+    "typescript": "^5.7.3"
   }
 }
